--- a/emit/css/cart.css
+++ b/emit/css/cart.css
@@ -95,10 +95,11 @@ body
     width: 25%;
     text-align: center;
     color: aliceblue;
-    background-image: url(../assets/images/addcart.jpg);
+    background-image: url(../assets/images/right.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 25px;
+    /*margin-left: 30px;*/
     margin-right: 45px;
     padding:10px;
 }
