--- a/api/css/about.css
+++ b/api/css/about.css
@@ -1,3 +1,8 @@
+#about
+{
+    margin-right: 3%;
+    margin-left: 3%;
+}
 .cmp img
 {
     width:20%;
@@ -7,8 +12,8 @@
 }
 .cmp
 {
-    width:44%;
-    height: 600px;
+    width:45%;
+    height: auto;
     float:left;
     margin: 15px;
     padding: 5px;
@@ -24,7 +29,7 @@
     padding: 10px;
 }
 
-.cmp span
+.cmp p
 {
     width: 75%;
     font-family: monospace;
@@ -122,7 +127,7 @@
     padding: 5px;
 }
 
-.cmp span
+.cmp p
 {
     font-size: 10px;
     color: #585858;
@@ -183,7 +188,8 @@
     .cmp img
 {
     margin-top: 10px;
-    height:60px;
+    height:40px;
+    width: 12%;
 }
 .cmp
 {
@@ -192,7 +198,6 @@
     margin: 25px;
     margin-left: 12%;
     padding: 5px;
-    color: chocolate;
     text-align: center;
     border: 5px solid gray;
     border-radius: 15px;
@@ -202,14 +207,12 @@
 .cmp h3
 {
     font-size: 10px;
-    background-color: #0404B4;
     padding: 5px;
 }
 
-.cmp span
+.cmp p
 {
     font-size: 10px;
-    color: #585858;
     float: right;
     margin:5px;
 }
@@ -224,14 +227,11 @@
 {
     font-size: 15px;
     text-align: center;
-    background-color: darkblue;
-    color: crimson;
     padding: 5px;
 }
 
 #details h3
 {
-    color: gray;
     margin-left: 15%;
     font-size: 10px;
     
@@ -240,17 +240,7 @@
 #details label
 {
     margin-left:10%;
-    color: #F7D511;
-    font-family: 'Helvetica Neue';
-	font-size: 12px;
-}
-
-#details h3 button
-{
-    width:auto;
-    padding: 10px;
-    background-color: crimson;
-    color: cornsilk;
+    font-size: 12px;
 }
 
 #details p
@@ -263,4 +253,3 @@
     
 } 
     
-}
