--- a/api/css/company.css
+++ b/api/css/company.css
@@ -1,7 +1,7 @@
 body
 {
     
-    background: url(../assets/images/login2.jpg) no-repeat center center fixed;
+    background: url(../assets/images/login2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
